; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/powerpc/platforms/cell/spufs/extr_spu_save.c_save_tag_mask.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/powerpc/platforms/cell/spufs/extr_spu_save.c_save_tag_mask.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32* }

@tag_mask = common dso_local global i32 0, align 4
@MFC_RdTagMask = common dso_local global i32 0, align 4
@regs_spill = common dso_local global %struct.TYPE_2__* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @save_tag_mask to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @save_tag_mask() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @tag_mask, align 4
  %3 = call i32 @LSCSA_QW_OFFSET(i32 %2)
  store i32 %3, i32* %1, align 4
  %4 = load i32, i32* @MFC_RdTagMask, align 4
  %5 = call i32 @spu_readch(i32 %4)
  %6 = load %struct.TYPE_2__*, %struct.TYPE_2__** @regs_spill, align 8
  %7 = load i32, i32* %1, align 4
  %8 = zext i32 %7 to i64
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %6, i64 %8
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 0
  %11 = load i32*, i32** %10, align 8
  %12 = getelementptr inbounds i32, i32* %11, i64 0
  store i32 %5, i32* %12, align 4
  ret void
}

declare dso_local i32 @LSCSA_QW_OFFSET(i32) #1

declare dso_local i32 @spu_readch(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
